# map_app

./: .gitignore  docker-compose.yml  readme.md
deployment/: Dockerfile
deployment/frontend/: Dockerfile
frontend/: .gitignore  package.json
frontend/graphql/: apollo-client.ts
frontend/pages/: index.tsx
frontend/pages/tutorial/catapp/: index.tsx
frontend/pages/tutorial/products/: [id].tsx  index.tsx
map/: pyproject.toml  settings.py
map/db/: alembic.ini  insert.py
map/db/migrations/: env.py
map/db/migrations/versions/: 2022_09_06_1440-19410f6f1273_create_country_table.py
map/src/: db.py  schema.py
map/src/models/: country.py
map/tests/: test_schema.py
