[tool.poetry]
name = "map-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "map_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
strawberry-graphql = "^0.127.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
