[tool.poetry]
name = "map"
version = "0.1.0"
description = ""
authors = ["mol2mol39@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
strawberry-graphql = "^0.127.4"
databases = {extras = ["postgresql"], version = "^0.6.1"}
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
